tighten the screws
